# hex-to-uf2

./: .gitignore  Cargo.toml  README.md
cargo_hex_to_uf2/: Cargo.toml
cargo_hex_to_uf2/src/: main.rs
hex_to_uf2/: Cargo.toml
hex_to_uf2/src/: families.rs  lib.rs
hex_to_uf2/test/: fenris-rmk-central.hex  fenris-rmk-central_py.uf2  python_output.txt  rust_output.txt
hex_to_uf2_bin/: Cargo.toml
hex_to_uf2_bin/src/: main.rs
src/: block.rs  families.rs  lib.rs  main.rs
test/: fenris-rmk-central_py_id.uf2
